[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "examples/*",
]

[workspace.package]
version = "0.0.1"
repository = "https://github.com/crutcher/clockmill"
rust-version = "1.90.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "warn"

[workspace.dependencies]
burn = "0.20.0-pre.3"
serde = "^1"

uuid = "1.18.1"
clap = "^4.5.52"
indicatif = "^0.18.3"

tokio = "1.47.1"
futures = "0.3.31"
