[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
]

[workspace.package]
version = "0.0.2"
repository = "https://github.com/crutcher/clockmill"
rust-version = "1.90.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "warn"

[workspace.dependencies]
burn = "0.20.0-pre.4"
serde = "^1"
tokio = "^1.47.1"
futures = "^0.3.31"

uuid = "^1.19.0"
clap = "^4.5.53"
indicatif = "^0.18.3"

