[package]
name = "tbs-common"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full", "tracing"] }

[dev-dependencies]
burn = { workspace = true, features = ["wgpu"]}
tokio = { workspace = true, features = ["test-util"]}

[lints]
workspace = true
