[package]
name = "tbs-common"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full", "tracing"] }
futures = { workspace = true }

uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
burn = { workspace = true, features = ["wgpu"] }

[lints]
workspace = true
